--- a/public/contato.html
+++ b/public/contato.html
@@ -1,4 +1,59 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Contato - MenteHiTech</title>
+    <link rel="stylesheet" href="/static/style.css">
+    <style>
+        /* Estilo básico do formulário */
+        body { font-family: Arial, sans-serif; background: #0a0a0a; color: #fff; }
+        .container { max-width: 600px; margin: 50px auto; padding: 20px; background: #111; border-radius: 10px; box-shadow: 0 0 20px #00f0ff; }
+        input, textarea { width: 100%; padding: 10px; margin-bottom: 15px; border: none; border-radius: 5px; }
+        textarea { resize: vertical; height: 120px; }
+        button { padding: 12px 20px; border: none; border-radius: 8px; background: linear-gradient(90deg,#00f0ff,#00bfff); color: #fff; font-weight: bold; cursor: pointer; transition: all 0.3s ease; }
+        button:hover { background: linear-gradient(90deg,#00bfff,#00f0ff); transform: scale(1.05); }
+        .success { background: #0f0; color: #000; padding: 10px; border-radius: 5px; margin-top: 10px; display: none; }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h2>Fale Conosco</h2>
+        <form id="contato-form">
+            <input type="text" name="nome" placeholder="Seu nome" required>
+            <input type="email" name="email" placeholder="Seu email" required>
+            <textarea name="mensagem" placeholder="Sua mensagem" required></textarea>
+            <button type="submit">Enviar Mensagem</button>
+        </form>
+        <div class="success" id="success-msg">Mensagem enviada com sucesso!</div>
+    </div>
+
+    <script>
+        const form = document.getElementById("contato-form");
+        const successMsg = document.getElementById("success-msg");
+
+        form.addEventListener("submit", async (e) => {
+            e.preventDefault();
+            const data = new FormData(form);
+
+            try {
+                const response = await fetch("https://mentehitech.onrender.com/contato", {
+                    method: "POST",
+                    body: data
+                });
+                const result = await response.json();
+
+                if (result.status === "sucesso") {
+                    successMsg.style.display = "block";
+                    form.reset();
+                    setTimeout(() => { successMsg.style.display = "none"; }, 5000);
+                } else {
+                    alert("Erro ao enviar: " + result.mensagem);
+                }
+            } catch (err) {
+                alert("Erro de conexão. Tente novamente mais tarde.");
+            }
+        });
+    </script>
+</body>
+</html>
